16.02.2004	m. fuchs	lean explorer version without additional bells and whistles -> see CVS branch "lean-explorer"
23.02.2004	m. fuchs	start menu navigation using first characters of entry names
						fixes for leaking GDI handles
25.02.2004	m. fuchs	rebar control for desktop bar
28.02.2004	m. fuchs	"minimize all" functionality
						various fixes for notification icons, task bar and desktop switching
12.03.2004	m. fuchs	automatic adjustment start button to text size
15.03.2004	m. fuchs	implementation of volume control tray icon
20.03.2004	m. fuchs	context menu for notification area
21.03.2004	m. fuchs	configuration dialog for notification icons
						XML storage for configuration options
28.03.2004	m. fuchs	configuration options for showing/hiding clock, ...
04.04.2004	m. fuchs	import of IE bookmarks; explorer sidebar with bookmark display
09.04.2004	m. fuchs	changed favorites start menu implementation to work with internal bookmarks

12.04.2004	m. fuchs	ShellBrowserChild: jump to addressbar target
17.05.2004	m. fuchs	use precompiled headers for VC++ builds
01.06.2004	m. fuchs	integrate optional SDI mode into main explorer branch
15.07.2004	m. fuchs	fix root path for folders opened from the desktop
18.07.2004	m. fuchs	precompiled header support for GCC 3.4.1
31.07.2004	m. fuchs	use same startmenu entries height as MS explorer
02.08.2004	m. fuchs	context menus for start menus and quick launch bar
03.08.2004	m. fuchs	get version number to display from RES_STR_PRODUCT_VERSION
16.08.2004	m. fuchs	display version information in about dialog and on the desktop
15.09.2004	m. fuchs	remove direct version output from desktop; instead store the activation flag into the registry
17.09.2004	m. fuchs	handle "." and ".." as special direcory names and move them at the very first beginning of directory listings
23.09.2004	m. fuchs	configuration dialog to choose between MDI and SDI mode with persistent storage
20.11.2004	m. fuchs	display notification icon change times